--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
-    "pump": "^1.0.3",
-    "eslint": "^3.18.0",
+    "critical": "^1.3.4",
+    "eslint": ">=4.18.2",
     "eslint-config-prettier": "^2.1.0",
     "eslint-config-xo": "^0.18.1",
     "eslint-plugin-no-use-extend-native": "^0.3.12",
@@ -35,6 +35,7 @@
     "eslint-plugin-unicorn": "^2.1.0",
     "power-assert": "^1.4.1",
     "prettier": "^1.1.0",
+    "pump": "^1.0.3",
     "source-list-map": "^1.1.2",
     "tape": "^4.9.1",
     "tape-catch": "^1.0.6",
