css minifier added

--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "compressor",
-  "description": "Minify files with UglifyJS.",
-  "version": "1.0.1",
+  "name": "js-html-css-multitool",
+  "description": "minify, uglify, lint",
+  "version": "1.0.",
   "author": "Raman Kathavate",
   "contact": "kathavate.raman@gmail.com",
   "licence": "MIT",
   "dependencies": {
-    "gulp": "^4.0.2",
-    "gulp-jshint": "^2.1.0",
-    "jshint": "^2.10.2",
-    "gulp-terser": "^1.2.0",
-    "jshint-stylish": "^2.2.1",
-    "gulp-util": "^3.0.8",
-    "gulp-changed": "^4.0.0",
-    "uglify-js": "^3.6.0",
     "array-each": "^1.0.1",
     "extend-shallow": "^3.0.2",
+    "gulp": "^4.0.2",
+    "gulp-changed": "^4.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-css-condense": "^1.1.2",
+    "gulp-jshint": "^2.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^1.2.0",
     "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8",
     "gulplog": "^1.0.0",
     "has-gulplog": "^0.1.0",
     "isobject": "^3.0.1",
+    "jshint": "^2.10.2",
+    "jshint-stylish": "^2.2.1",
     "make-error-cause": "^1.1.1",
     "safe-buffer": "^5.1.2",
+    "terser": "^4.1.2",
     "through2": "^2.0.0",
+    "uglify-js": "^3.6.0",
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
@@ -42,7 +46,6 @@
     "testdouble": "^2.1.2",
     "vinyl": "^2.0.0"
   },
-  "homepage": "http://websited.in",
   "keywords": [
     "gulpplugin"
   ],
